keywords mobile overflow issue fixed

--- a/src/assets/css/Blog.css
+++ b/src/assets/css/Blog.css
@@ -58,7 +58,9 @@ p {
 .post-keywords {
     display: flex;
     flex-direction: row;
-    gap: 30px;
+    flex-wrap: wrap;
+    row-gap: 10px;
+    column-gap: 10px;
     text-transform: capitalize;
 }
 
@@ -75,6 +77,7 @@ p {
     flex-direction: row;
     gap: 30px;
     text-transform: capitalize;
+    margin-bottom: 1em;
 }
 
 .post-category {
